--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,11 +6,11 @@ on:
       - main
 
 jobs:
-  build:
+  build_and_export_ios:
     runs-on: macOS-latest
 
     steps:
-    - name: Checkout
+    - name: Checkout code
       uses: actions/checkout@v2
 
     - name: Create iOS directory
@@ -25,28 +25,24 @@ jobs:
         export_preset: export_presets
         export_debug: true
         export_as_pack: true
-        export_path: './ios/game.ipa'
-        
-        
-    - name: Upload Artifact
+        export_path: '/Users/runner/work/project-name/project-name/ios/game.ipa'
+
+    - name: Archive iOS App with Xcode
+      uses: apple-actions/xcode@v3
+      with:
+        destination: generic/platform=iOS
+        xcworkspace-path: './ios/project-name.xcworkspace'
+        scheme: 'project-name'
+        xcode-version: '12.5.1'
+
+    - name: Upload iOS Build Artifact
       uses: actions/upload-artifact@v2
       with:
         name: iOS Build
-        path: ./ios/
+        path: /Users/runner/Library/Developer/Xcode/Archives/{latest}/project-name.xcarchive/Products/Applications/project-name.app
 
-    - name: Install Xcode
-      uses: sinoru/actions-setup-xcode@v2.0.2
-      with:
-        version: '13.4'    
-    - run: fastlane scan
-    
-    - name: Build iOS App
-      run: |
-        cd ios
-        xcodebuild archive -allowProvisioningUpdates -workspace YourWorkspaceName.xcworkspace -scheme YourSchemeName -archivePath aaa.xcarchive
-
-    - name: Export IPA
+    - name: Upload iOS IPA Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: iOS Build
-        path: ./ios/aaa.xcarchive/Products/Applications/aaa.ipa
+        name: iOS IPA
+        path: /Users/runner/work/project-name/project-name/ios/game.ipa
