--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,13 +25,13 @@ jobs:
         export_preset: export_presets
         export_debug: true
         export_as_pack: true
-        export_path: '/Users/runner/work/project-name/project-name/ios/game.ipa'
+        export_path: '/Users/runner/work/aaa/aaa/ios/game.ipa'
 
     - name: Archive iOS App with Xcode
       uses: sinoru/actions-setup-xcode@v2.0.2
       with:
         destination: generic/platform=iOS
-        xcworkspace-path: './ios/project-name.xcworkspace'
+        xcworkspace-path: './ios/aaa.xcworkspace'
         scheme: 'project-name'
         xcode-version: '12.5.1'
 
@@ -39,10 +39,10 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: iOS Build
-        path: /Users/runner/Library/Developer/Xcode/Archives/{latest}/project-name.xcarchive/Products/Applications/project-name.app
+        path: /Users/runner/Library/Developer/Xcode/Archives/{latest}/aaaxcarchive/Products/Applications/aaa.app
 
     - name: Upload iOS IPA Artifact
       uses: actions/upload-artifact@v2
       with:
         name: iOS IPA
-        path: /Users/runner/work/project-name/project-name/ios/game.ipa
+        path: /Users/runner/work/aaa/aaa/ios/game.ipa
