--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,19 +27,21 @@ jobs:
         export_as_pack: true
         export_path: '/Users/runner/work/aaa/aaa/ios/game.ipa'
 
-    - name: Archive iOS App with Xcode
+    - name: Install Xcode
       uses: sinoru/actions-setup-xcode@v2.0.2
       with:
-        destination: generic/platform=iOS
-        xcworkspace-path: './ios/aaa.xcworkspace'
-        scheme: 'project-name'
-        xcode-version: '12.5.1'
+        xcode-version: 'default'
+
+    - name: Archive iOS App with Xcode
+      run: |
+        cd ios
+        xcodebuild archive -allowProvisioningUpdates -workspace aaa.xcworkspace -scheme aaa -archivePath aaa.xcarchive
 
     - name: Upload iOS Build Artifact
       uses: actions/upload-artifact@v2
       with:
         name: iOS Build
-        path: /Users/runner/Library/Developer/Xcode/Archives/{latest}/aaaxcarchive/Products/Applications/aaa.app
+        path: /Users/runner/Library/Developer/Xcode/Archives/{latest}/aaa.xcarchive/Products/Applications/aaa.app
 
     - name: Upload iOS IPA Artifact
       uses: actions/upload-artifact@v2
