--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,11 +21,11 @@ jobs:
       with:
         godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_osx.universal.zip
         godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
-        relative_project_path: './'
+        relative__path: './'
         export_preset: export_presets
         export_debug: true
         export_as_pack: true
-        export_path: '/Users/runner/work/project-name/project-name/ios/game.ipa'
+        export_path: '/Users/runner/work/aaa/aaa/ios'
 
     - name: List iOS directory contents
       run: ls -l ios
@@ -33,16 +33,16 @@ jobs:
     - name: Archive iOS App with Xcode
       run: |
         cd ios
-        xcodebuild archive -allowProvisioningUpdates -workspace ../aaa.xcworkspace -scheme aaa -archivePath aaa.xcarchive
+        xcodebuild archive -allowProvisioningUpdates -workspace ../../aaa.xcworkspace -scheme aaa -archivePath aaa.xcarchive
 
     - name: Upload iOS Build Artifact
       uses: actions/upload-artifact@v2
       with:
         name: iOS Build
-        path: /Users/runner/Library/Developer/Xcode/Archives/{latest}/aaa.xcarchive/Products/Applications/project-name.app
+        path: /Users/runner/Library/Developer/Xcode/Archives/{latest}/aaa.xcarchive/Products/Applications/aaa.app
 
     - name: Upload iOS IPA Artifact
       uses: actions/upload-artifact@v2
       with:
         name: iOS IPA
-        path: /Users/runner/work/project-name/project-name/ios/game.ipa
+        path: /Users/runner/work/aaa/aaa/ios/game.ipa
