--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,32 +1,31 @@
-name: Export and build iOS app
+name: Godot iOS Export
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main # Replace with your desired branch
 
 jobs:
   build:
-    name: Export and build
-    runs-on: macos-latest
+    runs-on: macOS-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Create export directory
-      run: mkdir -p ./export/ios_template
-    - name: Download export templates
-      run: |
-        curl -L -o ./export/godot_export_templates.zip https://downloads.tuxfamily.org/godotengine/3.4.3/Godot_v3.4.3-stable_export_templates.tpz
-        unzip -q -d ./export/godot_export_templates ./export/godot_export_templates.zip
-        curl -L -o ./export/ios_template.zip https://github.com/godotengine/godot-ios-template/archive/master.zip
-        unzip -q -d ./export/ios_template ./export/ios_template.zip
-    - name: Export Godot game
-      run: ./export/godot_export_templates/mac/Godot_v3.4.3-stable_export_templates/MacOS/Godot --export "iOS" ./export/YourApp.ipa
-    - name: Create Xcode project
-      run: ./export/ios_template/godot_ios_export.py --create-xcodeproj --template=./export/ios_template --path=./export
-    - name: Build iOS app with Xcode
-      run: xcodebuild -workspace ./export/YourApp.xcworkspace -scheme YourScheme -destination generic/platform=iOS build
-    - name: Upload app archive
-      uses: actions/upload-artifact@v2
-      with:
-        name: ios-app
-        path: ./export/YourApp.xcarchive
+      - name: Set up Git
+        uses: actions/checkout@v2
+
+      - name: Set up Godot
+        run: |
+          wget https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
+          unzip Godot_v3.5.1-stable_export_templates.tpz
+          mkdir -p ~/.godot/templates
+          mv templates ~/.godot/templates
+
+      - name: Build iOS export
+        run: |
+          sudo xcode-select --switch /Applications/Xcode.app
+          godot --export "iOS" .
+
+      - name: Upload iOS export
+        uses: actions/upload-artifact@v2
+        with:
+          name: iOS-export
+          path: iOS_export
