--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,30 +1,83 @@
-name: Export Game
+name: Export Godot Game for iOS and Xcode
 
 on:
   push:
     branches:
-      - main
+      - dev
 
 jobs:
-  export_game:
-    runs-on: macOS-latest
-    
+  export-ios:
+    runs-on: macos-latest
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
-    
-    - name: Download Godot 3.5.1
-      run: |
-        wget https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_osx.universal.zip
-        unzip Godot_v3.5.1-stable_osx.universal.zip
-    
-    - name: Export Game
-      run: |
-        chmod +x Godot.app
-        ./Godot_v3.5.1-stable_osx.universal --export "Platform" /path/to/exported/game
-    
-    - name: Create Artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: Exported Game
-        path: /path/to/exported/game
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Change working directory to project root
+        run: cd $GITHUB_WORKSPACE
+
+      - name: Install dependencies
+        run: |
+          brew update
+          brew install wget
+          brew install git
+          
+      - name: Download Godot CLI
+        run: |
+          curl -L -o godot.zip https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_osx.universal.zip
+          
+      - name: Extract Godot CLI
+        run: |
+          pwd
+          ls
+          unzip godot.zip -d godot
+          mv godot/Godot.app/Contents/MacOS/* godot/
+          rm -rf godot/Godot.app
+          
+      - name: List contents of godot directory
+        run: |
+          ls -la godot
+          
+      - name: Download Godot iOS Export Template
+        run: |
+          curl -L -o ios_export_template.zip https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
+          
+      - name: Extract Godot iOS Export Template
+        run: |
+          unzip ios_export_template.zip -d ios_export_template
+          
+      - name: Download Godot Xcode Export Template
+        run: |
+          curl -L -o xcode_export_template.zip https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
+          
+      - name: Extract Godot Xcode Export Template
+        run: |
+          unzip xcode_export_template.zip -d xcode_export_template
+          
+      - name: Install iOS export template
+        run: |
+          ./godot/Godot --gdnative-generate-json-api
+          cp ios_export_template/iOS_*.zip .
+          unzip iOS_*.zip -d ios_export_template
+          ./godot/Godot --export "iOS" -tp ios_export_template godot-gdnative-api.json
+          
+      - name: Install Xcode export template
+        run: |
+          cp xcode_export_template/Xcode_*.zip .
+          unzip Xcode_*.zip -d xcode_export_template
+          ./godot/Godot --export-debug "Xcode" -tp xcode_export_template godot-gdnative-api.json
+          
+      - name: Build Godot Game for iOS
+        run: |
+          export_path="export/iOS"
+          ./godot/Godot --path . --export "iOS" "$export_path/game.ipa"
+          
+      - name: Archive iOS App
+        uses: actions/upload-artifact@v2
+        with:
+          name: game.ipa
+          path: export/iOS/game.ipa
+
+      - name: Build Godot Game for Xcode
+        run: |
+          export_path="export/Xcode"
+          ./godot/Godot --path . --export
