--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,7 +19,8 @@ jobs:
       run: |
         curl -sSL "https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_osx.universal.zip" -o godot.zip
         unzip godot.zip
-        chmod +x Godot_v3.5.1-stable_osx.universal/Godot.app/Contents/MacOS/Godot
+        chmod +x Godot.app/Contents/MacOS/Godot || exit 1
+        ls -l Godot.app/Contents/MacOS/ # Optional: List the contents of the folder for troubleshooting
         
     - name: Install Xcode
       uses: actions/setup-node@v2
