--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,16 +19,14 @@ jobs:
       run: |
         curl -sSL "https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_osx.universal.zip" -o godot.zip
         unzip godot.zip
-        chmod +x Godot.app/Contents/MacOS/Godot || exit 1
-        ls -l Godot.app/Contents/MacOS/ # Optional: List the contents of the folder for troubleshooting
+        chmod +x Godot_v3.5.1-stable_osx.universal/Godot.app/Contents/MacOS/Godot
         
     - name: Install Xcode
-      uses: actions/setup-node@v2
+      uses: actions/setup-xcode@v2
       with:
-        node-version: "14"
-        xcode-version: "12.x"
+        xcode-select: '12.x'
     
     - name: Build for iOS
       run: |
-        Godot_v3.5.1-stable_osx.universal/Godot.app/Contents/MacOS/Godot --export "iOS" /path/to/exported/game
+        xcodebuild -project /path/to/your/project.xcodeproj -scheme YourScheme -configuration Release CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
         # Additional build and test commands
