--- a/.github/workflows/iOS.yml
+++ b/.github/workflows/iOS.yml
@@ -20,15 +20,8 @@ jobs:
           export_debug: false
           export_as_pack: true
 
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
         with:
-          tag_name: v1.0.0
-          release_name: Release v1.0.0
-          body: |
-            This is the release of the iOS export.
-          draft: false
-          prerelease: false
+          name: iOS Export
+          path: export/
