--- a/.github/workflows/iOS.yml
+++ b/.github/workflows/iOS.yml
@@ -1,4 +1,4 @@
-name: iOS Export and Upload
+name: iOS Export
 on:
   push:
     branches:
@@ -7,21 +7,19 @@ jobs:
   build:
     runs-on: macOS-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Export iOS
-        uses: firebelley/godot-export@v5.1.0
-        with:
-          godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_osx.universal.zip
-          godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
-          relative_project_path: './'
-          export_preset: export_presets
-          export_debug: false
-          export_as_pack: true
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: iOS Export
-          path: export/
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Export iOS
+      uses: firebelley/godot-export@v5.1.0
+      with:
+        godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_osx.universal.zip
+        godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
+        relative_project_path: './'
+        export_preset: export_presets
+        export_debug: true
+        export_as_pack: true
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: iOS Build
+        path: /Users/runner/.local/share/godot/builds/iOS/
