--- a/.github/workflows/iOS.yml
+++ b/.github/workflows/iOS.yml
@@ -22,4 +22,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: iOS Build
-        path: /Users/runner/.local/share/godot/builds/iOS/
+        path: /Users/runner/.local/share/godot/builds/iOS/*
