--- a/.github/workflows/iOS.yml
+++ b/.github/workflows/iOS.yml
@@ -16,16 +16,17 @@ jobs:
           godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_osx.universal.zip
           godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.5.1/Godot_v3.5.1-stable_export_templates.tpz
           relative_project_path: './'
+          relative_export_path: ./exported_files
           export_preset: export_presets
           export_debug: false
           export_as_pack: false
 
-      - name: Copy Xcode Project
-        run: |
-          cp aaa.xcodeproj export/aaa.xcodeproj
+    #  - name: Copy Xcode Project
+    #    run: |
+    #      cp aaa.xcodeproj export/aaa.xcodeproj
 
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: iOS Xcode Project
-          path: export/aaa.xcodeproj
+   #   - name: Upload Artifact
+   #     uses: actions/upload-artifact@v2
+    #    with:
+   #       name: iOS Xcode Project
+   #      path: export/aaa.xcodeproj
